PLFED-296: format/cleanup source classes